# micronaut-bazel

./: .gitignore  BUILD  WORKSPACE.bazel  maven_install.json
src/backend/src/test/java/com/example/: BackendTest.java
